# tcc-can-aaos-esp

./: .gitignore  README.md  waveform_can.py
android-stuff/App_TCC/: .gitignore  settings.gradle.kts
android-stuff/App_TCC/app/: build.gradle.kts
android-stuff/can/: can.mk  init.can.rc
android-stuff/can/can-vhal-tcc/: Android.bp  Logging.h  SocketCan.cpp  can-vhal-tcc.cpp
android-stuff/can/can2vhal/: Android.bp  can2vhal.cpp  socket_can.cpp  socket_can.h
android-stuff/can/modules/: can-dev.ko  can-raw.ko  can.ko  mcp251x.ko  spi-bcm2835.ko
android-stuff/patches/: device.snappautomotive.rpi4_car.patch  hardware.interfaces.patch  packages.services.car.patch  repo.manifest.can-utils.patch
esp32-can/: .gitignore  CMakeLists.txt  Doxyfile  README.md  sdkconfig
esp32-can/components/dht22/: CMakeLists.txt  dht22.cpp
esp32-can/components/mcp2515/: CMakeLists.txt  README.md  mcp2515.cpp  spi.cpp
esp32-can/components/mpu6050/: CMakeLists.txt  i2c.cpp  mpu6050.cpp
esp32-can/docs/html/: README_8md.html  annotated.html  annotated_dup.js  can_8h.html  can_8h.js  can_8h_source.html  classI2C_1_1Bus-members.html  classI2C_1_1Bus.html  classI2C_1_1Bus.js  classMCP2515_1_1Device-members.html  classMCP2515_1_1Device.html  classMCP2515_1_1Device.js  classMPU6050_1_1Device-members.html  classMPU6050_1_1Device.html  classMPU6050_1_1Device.js  classSIM900_1_1Dev-members.html  (+120 more)
esp32-can/main/: CMakeLists.txt  main_dht22.cpp  main_receive.cpp  main_send.cpp  main_send_loopback_expA.cpp
esp32-can/tools/: format-code.sh
teste-de-usabilidade/: teste-analise.ipynb
(+139 files in other folders)
